--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,5 +38,5 @@ test:
     - cd app
     - pytest -p no:warnings --cov=.
     - flake8 .
-    - black --check --exclude=migrations .
+    - black --check --exclude=env .
     - isort ./*/*.py --check-only
