--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,13 +31,13 @@ test:
     - postgres:latest
   variables:
     POSTGRES_DB: movies_dev
-    POSTGRES_USER: movies
-    POSTGRES_PASSWORD: movies
-    DATABASE_TEST_URL: postgres://movies:movies@postgres:5432/movies_dev
+    POSTGRES_USER: runner
+    POSTGRES_PASSWORD: runner
+    DATABASE_TEST_URL: postgres://runner:runner@postgres:5432/movies_dev
     SQL_ENGINE: django.db.backends.postgresql
     SQL_DATABASE: movies_dev
-    SQL_USER: movies
-    SQL_PASSWORD: movies
+    SQL_USER: runner
+    SQL_PASSWORD: runner
     SQL_HOST: postgres
     SQL_PORT: 5432
     DATABASE: postgres
