--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,5 +8,6 @@ isort==4.3.21
 psycopg2-binary==2.8.5
 pytest-cov==2.8.1
 pytest-django==3.9.0
+pytest-xdist==1.31.0
 pytest==5.4.1
 whitenoise==5.0.1
