--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,11 +37,13 @@ test:
     DATABASE_URL: postgres://runner:runner@postgres:5432/users
   script:
     - cd app
-    - python manage.py makemigrations
-    - python manage.py migrate
-    - python manage.py loaddata movies.json
-    - pytest -p no:warnings --cov=.
+    - python3.8 -m venv env
+    - source env/bin/activate
+    - pip install -r requirements.txt
+    - pip install black flake8 isort pytest pytest-django
+    - pytest -p no:warnings
     - flake8 .
+    - black --check --exclude="migrations|env" .
     - isort ./*/*.py --check-only
 
 deploy:
