Unit tests and multistage docker build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ test:
     POSTGRES_DB: users
     POSTGRES_USER: runner
     POSTGRES_PASSWORD: runner
-    DATABASE_URL: postgres://runner:runner@postgres:5432/users
+    DATABASE_TEST_URL: postgres://runner:runner@postgres:5432/users
   script:
     - cd app
     - python3.8 -m venv env
