Unit tests and multistage docker build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,16 +37,19 @@ test:
     DATABASE_URL: postgres://runner:runner@postgres:5432/users
   script:
     - cd app
-    - python3.8 -m venv env
-    - source env/bin/activate
     - python manage.py makemigrations
     - python manage.py migrate
+    - python3.8 -m venv env
+    - source env/bin/activate
     - pip install -r requirements.txt
-    - pip install black flake8 isort pytest pytest-django
+    - pip install django black flake8 isort pytest pytest-django
+    - export DEBUG=1
     - pytest -p no:warnings
     - flake8 .
     - black --check --exclude="migrations|env" .
     - isort ./*/*.py --check-only
+    - export DEBUG=0
+    - python manage.py check --deploy --fail-level=WARNING
 
 deploy:
   stage: deploy
