--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,11 +42,10 @@ test:
     - python3.8 -m venv env
     - source env/bin/activate
     - pip install -r requirements.txt
-    - pip install django black flake8 isort pytest pytest-django
+    - pip install flake8 isort pytest pytest-django
     - export DEBUG=1
     - pytest -p no:warnings
     - flake8 .
-    - black --check --exclude="migrations|env" .
     - isort ./*/*.py --check-only
     - export DEBUG=0
     - python manage.py check --deploy --fail-level=WARNING
