--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -43,6 +43,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV DEBUG 0
+# updated
 ARG SECRET_KEY
 ENV SECRET_KEY $SECRET_KEY
 ENV DJANGO_ALLOWED_HOSTS .herokuapp.com
