--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,8 @@
-Django==3.0.5
+coreapi==2.3.3
+Django==3.0.2
 dj-database-url==0.5.0
 djangorestframework==3.11.0
+drf-yasg==1.17.1
 gunicorn==20.0.4
-psycopg2-binary==2.8.5
+psycopg2-binary==2.8.4
 whitenoise==5.0.1
